[package]
name = "epithet"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
toml = "0.9.2"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "thin"

[dev-dependencies]
rstest = "0.25.0"
